--- a/viewer/style.css
+++ b/viewer/style.css
@@ -62,8 +62,27 @@ span#title {
   display: inline-block;
 }
 
-#search-container {
+#new-repo-btn-container {
   margin-left: auto;
+  margin-right: 15px;
+}
+
+#new-repo-btn {
+  border: none;
+  background: rgb(0, 172, 0);
+  color: white;
+  height: 32px;
+  font-size: 0.7em;
+  border-radius: 5px;
+  margin-top: 8px;
+}
+
+#new-repo-btn:hover {
+  background-color: rgb(1, 141, 1);
+}
+
+#search-container {
+  margin-left: 15px;
   margin-right: 30px;
 }
 
@@ -78,8 +97,6 @@ span#title {
 }
 
 #search-button {
-  position: relative;
-  top: 0px;
   padding: 6px 10px;
   margin-top: 8px;
   margin-right: 16px;
@@ -314,4 +331,14 @@ pre#text {
 
 #repos {
   margin-top: 40px;
+}
+
+#new-repo-overlay {
+  display: none;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.26);
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  cursor: pointer;
 }
